--- a/app/views/produtos/produtos.html
+++ b/app/views/produtos/produtos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <title>E-commerce</title>
+    <script src="../../assets/script/Produtos.js"></script>
 </head>
 <body>
     <div class="container">
@@ -18,6 +19,33 @@
         </header>
         <div class="row mt-2">
             <h1 class="text-center" id="title">Produtos</h1>
+        </div>
+        <div class="row mt-2">
+            <form id="form_notes">
+
+                <!-- Nome input -->
+                <div class="form-outline mb-4">
+                    <input type="text" id="frm_title" class="form-control" name="nome"/>
+                    <label class="form-label" for="form2Example1">Title</label>
+                </div>
+        
+                <!-- Content input -->
+                <div class="form-outline mb-4">
+                    <input type="text" id="frm_content" class="form-control" name="text"/>
+                    <label class="form-label" for="form2Example2">Content</label>
+                </div>
+        
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-outline-primary me-2 mb-4" name="submit">Add Note</button>
+        
+            </form>
+        </div>
+        <div class="row mt-2">
+            <h1 class="text-center" id="title">Lista de Produtos</h1>
+
+            <div class="row" id="notes">
+
+            </div>
         </div>
     </div>
 </body>
