--- a/app/views/loja/loja.html
+++ b/app/views/loja/loja.html
@@ -1,54 +1,140 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <title>Lojista Logado</title>
+    <title>Gerenciamento de Produtos</title>
 </head>
 <style>
     .nav-item-custom-1 .nav-link {
-        color: black; /* Substitua pela cor desejada */
+        color: black;
+        /* Substitua pela cor desejada */
     }
-  
-    .nav-item-custom-2 .nav-link.active{
+
+    .nav-item-custom-2 .nav-link.active {
         background-color: black;
-        color: white; /* Substitua pela cor desejada */
+        color: white;
+        /* Substitua pela cor desejada */
     }
-  </style>
+</style>
+
 <body>
     <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
-          <li class="nav-item nav-item-custom-2"><a href="#" class="nav-link active" aria-current="page">Gerenciamento de Produtos</a></li>
-          <li class="nav-item nav-item-custom-1"><a href="../produtos/produtos.html" class="nav-link">Entregas</a></li>
-          <li class="nav-item nav-item-custom-1"><a href="../perguntas/perguntas.html" class="nav-link">Métricas estatísticas</a></li>
-          <li class="nav-item nav-item-custom-1"><a href="../sobre/sobre.html" class="nav-link">Contas</a></li>
+            <li class="nav-item nav-item-custom-2"><a href="#" class="nav-link active" aria-current="page">Gerenciamento
+                    de Produtos</a></li>
+            <li class="nav-item nav-item-custom-1"><a href="entregas.html" class="nav-link">Entregas</a></li>
+            <li class="nav-item nav-item-custom-1"><a href="estatisticas.html" class="nav-link">Métricas estatísticas</a></li>
+            <li class="nav-item nav-item-custom-1"><a href="contas.html" class="nav-link">Contas</a></li>
         </ul>
     </header>
-    <div class="container">
+    <div class="container mb-3">
         <div class="row mt-2">
-            <h1 class="text-center" id="title">Bem vindo Empresa X</h1>
+            <h1 class="text-center" id="title">Bem vindo Empresa [X]</h1>
         </div>
         <div class="row mt-2">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header text-center">
-                        <h3>Operações de produtos</h3>
+                        <h3>Produtos</h3>
                     </div>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <button type="button" class="btn btn-dark m-3" data-bs-toggle="modal" data-bs-target="#modalAddProduto">Visualizar Produtos</button>
-                                <button type="button" class="btn btn-dark m-3" data-bs-toggle="modal" data-bs-target="#modalAddProduto">Adicionar Produto</button>
-                                <button type="button" class="btn btn-dark m-3" data-bs-toggle="modal" data-bs-target="#modalAddProduto">Editar Produto</button>
-                                <button type="button" class="btn btn-dark m-3" data-bs-toggle="modal" data-bs-target="#modalAddProduto">Remover Produto</button>
+                        <!-- Dentro dessa div serão adicionados os produtos trazidos da api -->
+                        <div class="row" id="products">
+                            <div class="col-4 mt-4">
+                                <div class="card">
+                                    <!-- Imagem do produto -->
+                                    <img class="card-img-top" src="../../assets/images/celular.png"
+                                        alt="Imagem principal do produto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Nome do Produto</h5>
+                                        <p class="card-text">Descrição: TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                                            TEXT TEXT TEXT TEXT TEXT TEXT</p>
+                                        <p class="card-text">Categoria: Eletrônicos</p>
+                                        <p class="card-text">Preço: 50,00$</p>
+                                        <p class="card-text">Estoque: 10</p>
+
+                                        <div class="d-flex justify-content-center">
+                                            <!-- Redireciona para a tela de edição do produto -->
+                                            <a href="#" class="btn btn-dark m-2">Editar</a>
+                                            <button href="#" class="btn btn-danger m-2">Remover</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4 mt-4">
+                                <div class="card">
+                                    <!-- Imagem do produto -->
+                                    <img class="card-img-top" src="../../assets/images/celular.png"
+                                        alt="Imagem principal do produto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Nome do Produto</h5>
+                                        <p class="card-text">Descrição: TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                                            TEXT TEXT TEXT TEXT TEXT TEXT</p>
+                                        <p class="card-text">Categoria: Eletrônicos</p>
+                                        <p class="card-text">Preço: 50,00$</p>
+                                        <p class="card-text">Estoque: 10</p>
+
+                                        <div class="d-flex justify-content-center">
+                                            <!-- Redireciona para a tela de edição do produto -->
+                                            <a href="#" class="btn btn-dark m-2">Editar</a>
+                                            <button href="#" class="btn btn-danger m-2">Remover</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4 mt-4">
+                                <div class="card">
+                                    <!-- Imagem do produto -->
+                                    <img class="card-img-top" src="../../assets/images/celular.png"
+                                        alt="Imagem principal do produto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Nome do Produto</h5>
+                                        <p class="card-text">Descrição: TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                                            TEXT TEXT TEXT TEXT TEXT TEXT</p>
+                                        <p class="card-text">Categoria: Eletrônicos</p>
+                                        <p class="card-text">Preço: 50,00$</p>
+                                        <p class="card-text">Estoque: 10</p>
+
+                                        <div class="d-flex justify-content-center">
+                                            <!-- Redireciona para a tela de edição do produto -->
+                                            <a href="#" class="btn btn-dark m-2">Editar</a>
+                                            <button href="#" class="btn btn-danger m-2">Remover</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4 mt-4">
+                                <div class="card">
+                                    <!-- Imagem do produto -->
+                                    <img class="card-img-top" src="../../assets/images/celular.png"
+                                        alt="Imagem principal do produto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Nome do Produto</h5>
+                                        <p class="card-text">Descrição: TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+                                            TEXT TEXT TEXT TEXT TEXT TEXT</p>
+                                        <p class="card-text">Categoria: Eletrônicos</p>
+                                        <p class="card-text">Preço: 50,00$</p>
+                                        <p class="card-text">Estoque: 10</p>
+
+
+                                        <div class="d-flex justify-content-center">
+                                            <!-- Redireciona para a tela de edição do produto -->
+                                            <a href="#" class="btn btn-dark m-2">Editar</a>
+                                            <button href="#" class="btn btn-danger m-2">Remover</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>                  
+            </div>
         </div>
     </div>
 </body>
+
 </html>
