Remoção da tag style e criação do css

--- a/app/views/loja/loja.html
+++ b/app/views/loja/loja.html
@@ -6,20 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../../assets/css/marca.css">
     <title>Gerenciamento de Produtos</title>
 </head>
-<style>
-    .nav-item-custom-1 .nav-link {
-        color: black;
-        /* Substitua pela cor desejada */
-    }
-
-    .nav-item-custom-2 .nav-link.active {
-        background-color: black;
-        color: white;
-        /* Substitua pela cor desejada */
-    }
-</style>
 
 <body>
     <header class="d-flex justify-content-center py-3">
